@@ -4,6 +4,8 @@ CHANGELOG
 1.2.1
 -----
 
+* [maybe] Add static Maybe.findFirst(Stream)
+* [maybe] Add matchValue(Function, Supplier)
 * Bump kemitix-parent from 5.1.1 to 5.2.0 (#55)
 * Bump junit from 4.12 to 5.3.1 [#56)
 
